# cmake_template

./: CMakeLists.txt  gen.bat  main.cpp
